{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 70,
  "lineage": "c9b35a2f-45d9-8c86-e36f-eddf90a46dce",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:603614923340:vpc/vpc-f9314084",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a03f7dcf",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-e2445698",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-f9314084",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-50d42821",
            "owner_id": "603614923340"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0099abcbd9911f257",
            "arn": "arn:aws:ec2:us-east-1:603614923340:elastic-ip/eipalloc-0099abcbd9911f257",
            "association_id": "eipassoc-0cc939dc8abe8716f",
            "domain": "vpc",
            "id": "eipalloc-0099abcbd9911f257",
            "instance": "i-0bfb3efd8aad96da7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-069d3562c48bb79ed",
            "private_dns": "ip-172-31-34-91.ec2.internal",
            "private_ip": "172.31.34.91",
            "public_dns": "ec2-35-168-103-72.compute-1.amazonaws.com",
            "public_ip": "35.168.103.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "webserver-instance-1-eip"
            },
            "tags_all": {
              "Name": "webserver-instance-1-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.webserver_1",
            "aws_key_pair.generated_key",
            "aws_security_group.webserver_sg",
            "data.aws_vpc.default",
            "null_resource.create_keys_dir",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0c59b66477008d4",
            "arn": "arn:aws:ec2:us-east-1:603614923340:elastic-ip/eipalloc-0c0c59b66477008d4",
            "association_id": "eipassoc-09372f758757dcbfa",
            "domain": "vpc",
            "id": "eipalloc-0c0c59b66477008d4",
            "instance": "i-0e709fe0ad386fa9f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0330ec1b261349f6b",
            "private_dns": "ip-172-31-33-13.ec2.internal",
            "private_ip": "172.31.33.13",
            "public_dns": "ec2-18-232-254-140.compute-1.amazonaws.com",
            "public_ip": "18.232.254.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "webserver-instance-2-eip"
            },
            "tags_all": {
              "Name": "webserver-instance-2-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.webserver_2",
            "aws_key_pair.generated_key",
            "aws_security_group.webserver_sg",
            "data.aws_vpc.default",
            "null_resource.create_keys_dir",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3fed714af7c227f",
            "arn": "arn:aws:ec2:us-east-1:603614923340:elastic-ip/eipalloc-0f3fed714af7c227f",
            "association_id": "eipassoc-04f984cc3269bc9d7",
            "domain": "vpc",
            "id": "eipalloc-0f3fed714af7c227f",
            "instance": "i-09bffa9525786030a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06e4c05a219975b7a",
            "private_dns": "ip-172-31-94-236.ec2.internal",
            "private_ip": "172.31.94.236",
            "public_dns": "ec2-34-228-120-112.compute-1.amazonaws.com",
            "public_ip": "34.228.120.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "windows-server-instance-1-eip"
            },
            "tags_all": {
              "Name": "windows-server-instance-1-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.windows_server_1",
            "aws_key_pair.generated_key_windows",
            "aws_security_group.windows_rdp_sg",
            "data.aws_vpc.default",
            "null_resource.create_keys_dir",
            "tls_private_key.pk_windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0953476d60561c955",
            "arn": "arn:aws:ec2:us-east-1:603614923340:instance/i-0bfb3efd8aad96da7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfb3efd8aad96da7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "access_linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-069d3562c48bb79ed",
            "private_dns": "ip-172-31-34-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.91",
            "public_dns": "ec2-18-212-126-69.compute-1.amazonaws.com",
            "public_ip": "18.212.126.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bbd3d27c0c0dc8e6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "webserver-instances-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e61c3ab9",
            "tags": {
              "Name": "webserver-instance-1"
            },
            "tags_all": {
              "Name": "webserver-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec5a30a71e5f3cdb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.webserver_sg",
            "data.aws_vpc.default",
            "null_resource.create_keys_dir",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0953476d60561c955",
            "arn": "arn:aws:ec2:us-east-1:603614923340:instance/i-0e709fe0ad386fa9f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e709fe0ad386fa9f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "access_linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0330ec1b261349f6b",
            "private_dns": "ip-172-31-33-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.13",
            "public_dns": "ec2-13-218-154-228.compute-1.amazonaws.com",
            "public_ip": "13.218.154.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03dadd93c606e9bcd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "webserver-instances-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e61c3ab9",
            "tags": {
              "Name": "webserver-instance-2"
            },
            "tags_all": {
              "Name": "webserver-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec5a30a71e5f3cdb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.webserver_sg",
            "data.aws_vpc.default",
            "null_resource.create_keys_dir",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa71268a899c2733",
            "arn": "arn:aws:ec2:us-east-1:603614923340:instance/i-09bffa9525786030a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bffa9525786030a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "access_windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e4c05a219975b7a",
            "private_dns": "ip-172-31-94-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.236",
            "public_dns": "ec2-44-203-140-39.compute-1.amazonaws.com",
            "public_ip": "44.203.140.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0388a311903932528",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "windows-rdp-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4699b967",
            "tags": {
              "Name": "windows-server-instance-1"
            },
            "tags_all": {
              "Name": "windows-server-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a79fd262671a9fca"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.generated_key_windows",
            "aws_security_group.windows_rdp_sg",
            "data.aws_vpc.default",
            "null_resource.create_keys_dir",
            "tls_private_key.pk_windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:603614923340:security-group/sg-0ec5a30a71e5f3cdb",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec5a30a71e5f3cdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver-instances-sg",
            "name_prefix": "",
            "owner_id": "603614923340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-instances-sg"
            },
            "tags_all": {
              "Name": "webserver-instances-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-f9314084"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_rdp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:603614923340:security-group/sg-0a79fd262671a9fca",
            "description": "Allow RDP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a79fd262671a9fca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP from anywhere",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "windows-rdp-sg",
            "name_prefix": "",
            "owner_id": "603614923340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "windows-rdp-sg"
            },
            "tags_all": {
              "Name": "windows-rdp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-f9314084"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}